# Kevin_CMake

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
CMake_Ninja/: CMakeLists.txt  CMake_Ninja.cpp  CMake_Ninja.h
MyLibraryFolder/: CMakeLists.txt
MyLibraryFolder/Include/: MyLibrary.h
MyLibraryFolder/Sources/: MyLibrary.cpp
